--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -181,7 +181,7 @@
 			<footer>
 				<p>Join My Email Newsletter!</p>
 				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
-				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
+				<p><a href="mailto:lbreid03@gmail.com" target="_top">Sign Up!</a></p>
 				<p>Keep milking those Almonds- Lauren</p>
 				<p> <a href="#">Go to top</a></p>
 			</footer>
