--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -35,8 +35,8 @@
 	<main>
 		<section id="welcome" class="clearfix">
 			<div id="left" class="clearfix">
-			<h2>Welcome!</h2>
-			<p>This is a personal blog that showcases everything I really like to do. To try food and restaurants. To compile and alter recipes. And travel around the United States. When you live in a world with cheese, milk, butter and ice cream, it makes things very hard to be dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
+			<h2>Welcome to Dairy Free Girl in DC!</h2>
+			<p>If you might of guessed I am a girl and I spend alot of time in Washington, DC. This blog showcases everything I really like to do. Like trying new food and restaurants and compiling/alter recipes. When you live in a world with-out cheese, milk, butter and ice cream, you have to start becoming inventive. Follow all of my stories, adventures, recipes and tips for eating out!</p>
 			</div>
 			<aside id="right" class="clearfix">
 			<h3>Author Biography:</h3>
