--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<aside id="right" class="clearfix">
 			<h3>Author Biography:</h3>
-			<p>Hey guys, my name is Lauren and I am dairy free and I am not going to lie it is really hard. But, lukily I like to travel and try dairy free/vegan foods. I am super excited to share and show you all these amazing products.</p> <h3> <a href="#">Sign up for my Email List</a></h3>
+			<p>Hey guys, my name is Lauren and I am dairy free, egg free and glutten free. Some of you might be wondering, well what do you eat? And I am not going to lie it is really hard. But, lukily I like to travel/enjoy all the neat restaurants in DC and try dairy free/vegan foods. I am super excited to share these experiences with you and show you some amazing "dairy-free eats".</p> <h3> <a href="#">Sign up for my Email List</a></h3>
 			</aside>
 		</section>
 
