--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -40,14 +40,15 @@
 			</div>
 			<aside id="right" class="clearfix">
 			<h3>Author Biography:</h3>
-			<p>Hey guys, my name is Lauren and I am dairy free, egg free and glutten free. Some of you might be wondering, well what do you eat? And I am not going to lie it is really hard. But, lukily I like to travel/enjoy all the neat restaurants in DC and try dairy free/vegan foods. I am super excited to share these experiences with you and show you some amazing "dairy-free eats".</p> <h3> <a href="#">Sign up for my Email List</a></h3>
+			<p>Hey guys, my name is Lauren and I am dairy free, egg free and glutten free. Some of you might be wondering, well what do you eat? And I am not going to lie it is really hard. But, lukily I like to travel/enjoy all the neat restaurants in DC and try dairy free/vegan foods. I am super excited to share these experiences with you and show you some amazing "dairy-free eats".</p>
+			<h3> <a href="mailto:lbreid03@gmail.com" target="_top">Sign up for my Email List</a></h3>
 			</aside>
 		</section>
 
 
 <section id="wrapper" class="clearfix">
 		<div id="featured" class="columns">
-			<h3>Featured</h3>
+			<h3>Featured Posts</h3>
 			<p id="block">Look out for featured articles, reviews and recipes every month.
 			<a href="#">Learn More</a></p>
 		</div>
@@ -91,9 +92,9 @@
 			<h3>My Recommendations:</h3>
 
 				<ul>
-					<li>Don't Like Spice? Forgo adding the curry powderspice onto the chickpeas. Instead I recommend using chili powder, not as spicy but still gives the dish some flavor. </li>
+					<li>Don't Like Spice? Forgo adding the curry powder onto the chickpeas. Instead I recommend using chili powder, it is not as spicy but still gives the dish some flavor. </li>
 
-					<li>Can't Find Quinoa? Substitute the quinoa with rice.</li>
+					<li>Can't Find Quinoa? Substitute with rice.</li>
 
 					<li>Supermarket Shortcut: Buy Premade Guacamole as a time saver.</li>
 
@@ -135,9 +136,9 @@
 		<article class="blogi">
 			<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 			<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
-			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on a Sunday. Normally, for many families including mine, Sundays mean Pasta! St. Patricks Day normally shows people sporting green socks and eating Lucky Charms. But, there is more than just Corned Beef and Cabbage that you can have on this most famous of Catholic feast days. <br> So how about putting a green spin on your Sunday pasta meal? How should we do that? Well, the perfect place to start is by adding herbs and creating a pesto sauce.</p>
+			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on a Sunday. Normally, for many families including mine, Sunday's mean Pasta! St. Patricks Day normally shows people sporting green socks and eating Lucky Charms. There are more options than Corned Beef and Cabbage that you can have on this famous Catholic feast day. <br> So how about putting a green spin on your Sunday pasta meal? How should we do that? Well, the perfect place to start is by adding herbs and creating a pesto sauce.</p>
 
-			<p>Courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
+			<p>Recipe courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
 
 
 			<p>Normally, pesto contains dairy ingredients, but this recipe courtesy of Samah of Dadaeats, it is Dairy Free!</p>
