--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -136,7 +136,7 @@
 		<article class="blogi">
 			<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 			<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
-			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on a Sunday. Normally, for many families including mine, Sunday's mean Pasta! St. Patricks Day normally shows people sporting green socks and eating Lucky Charms. There are more options than Corned Beef and Cabbage that you can have on this famous Catholic feast day. <br> So how about putting a green spin on your Sunday pasta meal? How should we do that? Well, the perfect place to start is by adding herbs and creating a pesto sauce.</p>
+			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on Sunday. Normally, for many families including mine, Sunday's mean Pasta! St. Patricks Day normally has people in green socks and eating Lucky Charms and Corned Beef. What about Pasta on this famous Catholic feast day? <br> Let's put a green spin on your usual Sunday pasta dinner. </p>
 
 			<p>Recipe courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
 
