--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -33,4 +33,14 @@
 	</header>
 
   <main>
-    
+		<section id="welcome" class="clearfix">
+			<h2>Featured Posts</h2>
+		</section>
+
+		<section id="welcome" class="clearfix">
+			<div id="left" class="clearfix">
+				<h3></h3>
+			</div>
+			<div id="right" class="clearfix">
+			</div>
+		</section>
