--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -141,7 +141,7 @@
 			<p>Recipe courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
 
 
-			<p>Normally, pesto contains dairy ingredients, but this recipe courtesy of Samah of Dadaeats, it is Dairy Free!</p>
+			<p>Normally, pesto contains dairy ingredients, but this recipe courtesy of Samah of Dadaeats is Dairy Free!</p>
 
 					<h5> Prep Time</h5>
 					5 minutes
