--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -39,8 +39,10 @@
 
 		<section id="welcome" class="clearfix">
 			<div id="left" class="clearfix">
-				<h3></h3>
+				<h3>Try this!</h3>
+				<p>Insert list of top dairy free items that I have tried this month</p>
 			</div>
 			<div id="right" class="clearfix">
+				<p>Lorem ipsum</p>
 			</div>
 		</section>
