--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -23,7 +23,7 @@
 			</div>
 		<nav>
 			<a href="#">Home</a>
-			<a href="#">Featured</a>
+			<a href="featured.html">Featured</a>
 			<a href="#">Recipes</a>
 			<a href="#">Reviews</a>
 			<a href="#">Travel</a>
