--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -22,11 +22,11 @@
 			<span></span>
 			</div>
 		<nav>
-			<a href="#">Home</a>
+			<a href="index.html">Home</a>
 			<a href="featured.html">Featured</a>
-			<a href="#">Recipes</a>
-			<a href="#">Reviews</a>
-			<a href="#">Travel</a>
+			<a href="recipes.html">Recipes</a>
+			<a href="reviews.html">Reviews</a>
+			<a href="travel.html">Travel</a>
 			<a href="#">Follow</a>
 
 		</nav>
