--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -39,10 +39,11 @@
 
 		<section id="welcome" class="clearfix">
 			<div id="left" class="clearfix">
-				<h3>Try this!</h3>
-				<p>Insert list of top dairy free items that I have tried this month</p>
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum</p>
 			</div>
 			<div id="right" class="clearfix">
-				<p>Lorem ipsum</p>
+				<h3>Lauren's Top List of Goodies!</h3>
+				<p>Insert list of top dairy free items that I have tried this month</p>
 			</div>
 		</section>
