--- a/unit_8/email.html
+++ b/unit_8/email.html
@@ -2,27 +2,60 @@
 
     <head>
 
-        <title>Example document</title>
+        <title>Email Message #1</title>
 
     </head>
 
-    <body>
-
-        <table>
-
-            <tr>
-
-                <td>1</td>
-                <td>2</td>
-
-            </tr>
-
-            <tr>
-              <td>3</td>
-              <td>4</td>
-
+<body>
+  <table cellspacing="0" style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5;" border="0" width="100%">
+    <tr>
+      <th style="font-size: 1.6em;" align="left">May Email Newsletter: <br>Get to know your Salad!</th>
+      <td>
+      <table cellspacing="20" align="center" border="0">
+        <tr>
+          <td><a href="https://breidigaml.github.io/unit_8/recipes.html">Recipes</a></td>
+    			<td><a href="https://breidigaml.github.io/unit_8/reviews.html">Reviews</a></td>
+    			<td><a href="https://breidigaml.github.io/unit_8/travel.html">Travel</a></td>
+        </tr>
+      </table>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" align="center" style="background: #aec5ea;">
+              <img src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg" style="width: 100%;" title="Salad bowl" alt="salad is good">
+            </td>
+    </tr>
+    <tr>
+      <td style="background: ##9e9e9e; color: black; padding: 1em;" width="50%" valign="top">
+        <h2 style="color: #aec5ea; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;">Why eat a salad?</h2>
+        <p>
+          <ul>
+            <li>Source of Fiber</li>
+            <li>Prevents Bowl disease</li>
+            <li>Vitamins and minerials</li>
+            <li>Build strong bones</li>
+            <li>Protect your heart</li>
+          </ul>
+          </p>
+      </td>
+      <td style="background: ##9e9e9e; color: white; padding: 1em;" width="50%" valign="top">
+        <h2 style="color: #aec5ea; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;">choose your base</h2>
+        <table style="color: black; background: white;" cellpadding="20" cellspacing="0" align="center" border="1">
+          <tr>
+            <td>spinach</td>
+            <td>kale</td>
+          </tr>
+          <tr>
+            <td>watercress</td>
+            <td>romaine</td>
+          </tr>
         </table>
-
-    </body>
+      </td>
+    </tr>
+    <tr>
+      <td style="background: ##aec5ea;" align="center" colspan="2">Dairy Free Girl in DC © May 2019</td>
+    </tr>
+  </table>
+  </body>
 
 </html>
