--- a/unit_8/featured.html
+++ b/unit_8/featured.html
@@ -151,3 +151,16 @@
 						</article>
 
 					</section>
+
+					<footer>
+						<p>Join My Email Newsletter!</p>
+						<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
+						<p><a href="mailto:lbreid03@gmail.com" target="_top">Sign Up!</a></p>
+						<p>Keep milking those Almonds- Lauren</p>
+						<p> <a href="#">Go to top</a></p>
+					</footer>
+
+					</main>
+				</div>
+			</body>
+		</html>
